--- a/javascript10/index.html
+++ b/javascript10/index.html
@@ -9,8 +9,6 @@
 </head>
 <body>
 <h1>list of all photos album</h1>
-
-
 <table class="table">
     <thead>
         <tr>
@@ -22,25 +20,23 @@
         </tr>
     </thead>
 <tbody id="jsondatasabai">
-
 </tbody>
-
-
 </table>
-
-
 <script>
 
+
+
 fetch("https://jsonplaceholder.typicode.com/posts/")
-.then(res=>{
-    return res.json();
-    
+.then(res=>
+
+{
+    return res.json();              
 }
-<!-- data ma res.json()  sabai basni vayo-->
 ).then(data=>{
    const newdata = data;
-   console.log('newdata',newdata);
 
+
+   console.log('newdata',newdata);
    let rows = "";
 newdata.forEach((hamropost) => {
 rows +=`<tr>
@@ -51,15 +47,9 @@ rows +=`<tr>
 
 </tr>
  `
-
-
 });
-
 document.getElementById("jsondatasabai").innerHTML = rows;
 }).catch(err=>console.log(err))
-
-</script>
-
-    
+</script>  
 </body>
 </html>
